--- a/SKRE3V3-BLTouch/printer.cfg
+++ b/SKRE3V3-BLTouch/printer.cfg
@@ -89,10 +89,10 @@ pressure_advance: 0.050
 heater_pin: PC9
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
-#control: pid
-#pid_Kp: 70.375
-#pid_Ki: 0.875 
-#pid_Kd: 1414.547
+control: pid
+pid_Kp: 70.375
+pid_Ki: 0.875 
+pid_Kd: 1414.547
 min_temp: 0
 max_temp: 100
 
