--- a/SKRE3V3-BLTouch/printer.cfg
+++ b/SKRE3V3-BLTouch/printer.cfg
@@ -158,7 +158,7 @@ sensor_pin: ^PC14
 control_pin: PA1
 x_offset: -30
 y_offset: 0
-#z_offset: 0.550
+z_offset: 0.550
 
 [bed_mesh]
 mesh_min: 10, 10
