--- a/SKRE3V3-BLTouch/printer.cfg
+++ b/SKRE3V3-BLTouch/printer.cfg
@@ -77,10 +77,10 @@ filament_diameter: 1.750
 heater_pin: PC8
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PA0
-#control: pid
-#pid_Kp: 18.792
-#pid_Ki: 0.819
-#pid_Kd: 107.817
+control: pid
+pid_Kp: 18.792
+pid_Ki: 0.819
+pid_Kd: 107.817
 min_temp: 0
 max_temp: 300
 pressure_advance: 0.050
